--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,10 @@ h1{
   margin: 0;
 }
 
+header{
+  padding-top: 2em;
+}
+
 h2{
   font-family: "Permanent Marker", sans-serif;
   letter-spacing: .1em;
