--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,9 @@ code {
 
 .loading-page, .error-page {
   width: 100vw;
+  max-width: 100%;
   height: 100vh;
+  max-height: 100%;
   background-color: #2d2d2d;
   text-align: center;
   display: flex;
